# mmiat

./: README.md  pyproject.toml
examples/: attacking_simple_classifier.ipynb
src/mmiat/attacks/: LossAttack.py  MembershipInferenceAttack.py  __init__.py
src/mmiat/evaluation/: aggregate_metrics.py
src/mmiat/evaluation/metrics/: __init__.py  average_case_accuracy.py
src/mmiat/evaluation/reporting/: plot.py
src/mmiat/utils/: deviceutils.py  partitioningutils.py
src/mmiat/utils/data/: AttackPredictionDataset.py  __init__.py
src/mmiat/utils/reproducibility/: RandomState.py  __init__.py
