[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmiat"
version = "0.1.0"

authors = [
    {name = "Milos Vujasinovic"}
]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "numpy>=2.0.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "matplotlib>=3.9.4"
]